log/build_2024-09-22_12-17-28/webots_ros2_homework1_python/stderr.log
  File "/home/liam/f24_robotics/install/webots_ros2_homework1_python/lib/python3.10/site-packages/webots_ros2_homework1_python/webots_ros2_homework1_python.py", line 178
    if self.oscillation_count > 6
                                 ^
SyntaxError: expected ':'

